--- a/responsive.css
+++ b/responsive.css
@@ -23,5 +23,11 @@
         width: 100%;
         height: 100%;
     }
-    
+    .animsition{
+        display: inline-block;
+        text-align: center;
+        margin-left: 40px;
+        margin-top: 60px;
+        width: 150%;
+    }
 }
