--- a/css/example.css
+++ b/css/example.css
@@ -4,7 +4,7 @@ padding-top: 2.5% !important;
 }
 
 body{
-  background-image: url(back.png);
+  background-image: url(../img/back.png);
 }
 
 .text{
